tests/parser/validinput/autocompletion.idp
#include <mx>

vocabulary V{
	type Struct  
	SPQR: Struct
		
	type Formula  
	type ChildFormula isa Formula
	P: Formula
	
	Tr(Struct,Formula)
}
theory T:V{
	
}
structure S: V{
	Struct  = { eSPQR}
    Formula = { eP}
    ChildFormula = { cP}
	
	Tr = {eSPQR,P;  } //Oeps, foutje
	SPQR = eSPQR
	P=eP
}

procedure main(){
	//print(type(S[V::Formula.predicate].ct))
	//print(size(S[V::Formula.predicate].ct))
	if(size(S[V::Formula.predicate].ct)==2) // P should not be in Formula, because we did not specify it
	then return 1
	else return 0
	end 
}